--- a/app/index.html
+++ b/app/index.html
@@ -61,9 +61,15 @@
         </div>
 
 
+        <script type="text/template" class="info-master">
+            <div><%=copyright=></div>
+        </script>
+
+
         <!-- build:js scripts/vendor.js -->
         <!-- bower:js -->
         <script src="../bower_components/jquery/dist/jquery.js"></script>
+        <script src="../bower_components/underscore/underscore.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
 
