--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
 
     <div class = "pro-block">
         <h2 class ="info">
-           <%=name%>
+           <%=attributionHTML%>
         </h2>
          <h3 class ="info">
            <%=login%>
@@ -89,7 +89,7 @@
     <div>
         <span class ="info">
             <img src="images/company-icon.png">
-            <%=company%>
+            <%=limit%>
         </span>
         <span class ="info">
             <img src="images/gps-icon.png">
