--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,8 @@
 <!-- dynamic info being pushed into left column -->
 <script type="text/template" class="info-master">
   <h1><%=copyright%></h1>
+  <h1><%=name%></h1>
+  <h1><%=thumbnail.path%></h1>
 </script>
 
 
