--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 <script type="text/template" class="info-master">
   <h1><%=copyright%></h1>
   <h1><%=name%></h1>
-  <h1><%=thumbnail.path%></h1>
+  <h1><%=thumbnail%></h1>
 </script>
 
 
