--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
 <!-- dynamic info being pushed into left column -->
 <script type="text/template" class="info-master">
   <h1><%=copyright%></h1>
-  <h1><%=data.results.name%></h1>
+  <h1><%=data/results/name%></h1>
 </script>
 
 
